--- a/package.json
+++ b/package.json
@@ -51,6 +51,14 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "@types/request": "2.48.1",
+    "@types/request-promise-native": "1.0.15",
+    "@types/sinon": "7.0.5",
+    "bignumber.js": "8.0.2",
+    "blakejs": "1.1.0",
+    "lodash": "4.17.11",
+    "request": "2.88.0",
+    "request-promise-native": "1.0.5",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
@@ -62,6 +70,7 @@
     "nyc": "^13.1.0",
     "opn-cli": "^4.0.0",
     "prettier": "^1.15.2",
+    "sinon": "7.2.3",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
     "tslint": "^5.11.0",
